# doceaser

./: CONTRIBUTING.md  README.md  pyproject.toml
examples/: form.py  hello-world.md  request.py
src/doceaser/: cli.py  htmx.py  routes.py  wsgi.py
src/doceaser/assets/: bulma-toast.js
